@@ -1,10 +1,11 @@
 package com.se.Quality;
 
-import java.awt.Color;
-import java.awt.Font;
+import java.awt.BorderLayout;
 import java.awt.Toolkit;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
+import java.awt.event.FocusEvent;
+import java.awt.event.FocusListener;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -13,34 +14,27 @@ import java.util.HashMap;
 import java.util.Map;
 
 import javax.swing.ComboBoxModel;
-import javax.swing.JButton;
 import javax.swing.JComboBox;
 import javax.swing.JFrame;
 import javax.swing.JOptionPane;
 import javax.swing.JPanel;
 import javax.swing.JTabbedPane;
 import javax.swing.SwingWorker;
-import javax.swing.border.BevelBorder;
-import javax.swing.border.SoftBevelBorder;
 
 import osheet.SheetPanel;
 import osheet.WorkingSheet;
 
 import com.se.automation.db.client.mapping.Document;
 import com.se.automation.db.client.mapping.ParaFeedbackAction;
-import com.se.automation.db.client.mapping.PartComponent;
-import com.se.automation.db.client.mapping.Supplier;
 import com.se.automation.db.parametric.StatusName;
 import com.se.grm.client.mapping.GrmGroup;
 import com.se.grm.client.mapping.GrmRole;
-import com.se.parametric.Loading;
-import com.se.parametric.commonPanel.AlertsPanel;
-import com.se.parametric.commonPanel.ButtonsPanel;
+import com.se.parametric.MainWindow;
 import com.se.parametric.commonPanel.FilterPanel;
 import com.se.parametric.commonPanel.TablePanel;
+import com.se.parametric.commonPanel.WorkingAreaPanel;
 import com.se.parametric.dba.DataDevQueryUtil;
 import com.se.parametric.dba.ParaQueryUtil;
-
 import com.se.parametric.dto.GrmUserDTO;
 import com.se.parametric.dto.TableInfoDTO;
 
@@ -49,16 +43,12 @@ public class QAFeedBack extends JPanel implements ActionListener
 
 	SheetPanel sheetpanel = new SheetPanel();
 	// SheetPanel separationPanel = new SheetPanel();
-	JPanel tabSheet, selectionPanel;
-	JPanel devSheetButtonPanel, separationButtonPanel;
+	WorkingAreaPanel tabSheet, selectionPanel;
 	JTabbedPane tabbedPane;
 	ArrayList<ArrayList<String>> input = new ArrayList<ArrayList<String>>();
 	ArrayList<ArrayList<String>> separationValues = new ArrayList<ArrayList<String>>();
-	JButton save;
-	JButton Validate;
 	TablePanel tablePanel = null;
 	FilterPanel filterPanel = null;
-	ButtonsPanel buttonsPanel;
 	Long[] users = null;
 	WorkingSheet ws = null;
 	Map<String, WorkingSheet> wsMap = new HashMap<String, WorkingSheet>();
@@ -66,83 +56,68 @@ public class QAFeedBack extends JPanel implements ActionListener
 	long userId;
 	int width, height;
 	GrmUserDTO userDTO;
-	static AlertsPanel alertsPanel, alertsPanel1, alertsPanel2;
 
 	public QAFeedBack(GrmUserDTO userDTO)
 	{
-		setLayout(null);
+		this.setLayout(new BorderLayout());
 		this.userDTO = userDTO;
 		QAName = userDTO.getFullName();
 		userId = userDTO.getId();
 		width = Toolkit.getDefaultToolkit().getScreenSize().width;
 		height = Toolkit.getDefaultToolkit().getScreenSize().height;
 		ArrayList<Object[]> filterData = DataDevQueryUtil.getQAFeedBackFilterData(userDTO);
-		System.out.println("User:" + userDTO.getId() + " " + userDTO.getFullName() + " " + filterData.size());
-		selectionPanel = new JPanel();
+		System.out.println("User:" + userDTO.getId() + " " + userDTO.getFullName() + " "
+				+ filterData.size());
+
 		// String[] tableHeader = new String[] { "PdfUrl", "PlName", "SupplierName", "TaskType", "Status", "DevUserName", "Date" };
-		String[] tableHeader = new String[] { "PdfUrl", "PlName", "PlType", "SupplierName", "PDFParts", "Taskparts", "PDFDoneParts", "PLParts", "PLDoneParts", "PLFeatures", "TaskType", "Status", "DevUserName", "Date" };
+		String[] tableHeader = new String[] { "PdfUrl", "PlName", "PlType", "SupplierName",
+				"PDFParts", "Taskparts", "PDFDoneParts", "PLParts", "PLDoneParts", "PLFeatures",
+				"TaskType", "Status", "DevUserName", "QAReviewDate" };
+
+		selectionPanel = new WorkingAreaPanel(this.userDTO);
 		String[] filterLabels = { "PL Name", "Supplier", "Task Type", "User Name", "PL Type" };
-		tablePanel = new TablePanel(tableHeader, width - 120, (((height - 100) * 7) / 10));
-		tablePanel.setBounds(0, (((height - 100) * 3) / 10), width - 120, (((height - 100) * 7) / 10));
-		tablePanel.setBorder(new SoftBevelBorder(BevelBorder.RAISED, null, null, null, null));
-		filterPanel = new FilterPanel(filterLabels, filterData, width - 120, (((height - 100) * 3) / 10), false);
-		filterPanel.setBounds(0, 0, width - 120, (((height - 100) * 3) / 10));
+		filterPanel = selectionPanel.getFilterPanel(filterLabels, filterData, false, this);
+		tablePanel = selectionPanel.getTablePanel(tableHeader);
+
 		ArrayList<String> buttonLabels = new ArrayList<String>();
 		buttonLabels.add("Load PDF");
 		buttonLabels.add("Load All");
-		buttonsPanel = new ButtonsPanel(buttonLabels);
-		JButton buttons[] = buttonsPanel.getButtons();
-		for(int i = 0; i < buttons.length; i++)
-		{
-			buttons[i].addActionListener(this);
-		}
-		buttonsPanel.setBounds(width - 120, 0, 110, height / 3);
-		alertsPanel = new AlertsPanel(userDTO);
-		alertsPanel1 = new AlertsPanel(userDTO);
-		alertsPanel.setBounds(width - 120, height / 3, 110, height * 3 / 4);
-		alertsPanel1.setBounds(width - 120, height / 3, 110, height * 3 / 4);
-		selectionPanel.setLayout(null);
-		selectionPanel.add(filterPanel);
-		selectionPanel.add(tablePanel);
-		selectionPanel.add(buttonsPanel);
-		selectionPanel.add(alertsPanel);
+		selectionPanel.addButtonsPanel(buttonLabels, this);
+
+		tabSheet = new WorkingAreaPanel(this.userDTO);
+		buttonLabels = new ArrayList<String>();
+		buttonLabels.add("Validate");
+		buttonLabels.add("Save");
+		tabSheet.addButtonsPanel(buttonLabels, this);
+		sheetpanel = tabSheet.getSheet();
+
+		selectionPanel.addComponentsToPanel();
+		tabSheet.addComponentsToPanel();
 
 		tabbedPane = new JTabbedPane(JTabbedPane.TOP);
-		tabbedPane.setBounds(0, 0, width, height - 100);
-		tabSheet = new JPanel();
-		devSheetButtonPanel = new JPanel();
-		devSheetButtonPanel.setBackground(new Color(211, 211, 211));
-		devSheetButtonPanel.setBorder(new SoftBevelBorder(BevelBorder.RAISED, null, null, null, null));
-		devSheetButtonPanel.setBounds(width - 120, 0, 110, height / 3);
-		devSheetButtonPanel.setLayout(null);
-
-		Validate = new JButton("Validate");
-		Validate.setBounds(3, 40, 95, 29);
-		Validate.setForeground(new Color(25, 25, 112));
-		Validate.setFont(new Font("Tahoma", Font.BOLD, 11));
-		Validate.addActionListener(this);
-		devSheetButtonPanel.add(Validate);
-
-		save = new JButton("Save");
-		save.setBounds(3, 80, 95, 29);
-		save.setForeground(new Color(25, 25, 112));
-		save.setFont(new Font("Tahoma", Font.BOLD, 11));
-		save.addActionListener(this);
-		devSheetButtonPanel.add(save);
-
-		tabSheet.setLayout(null);
-		sheetpanel.setBounds(0, 0, width - 120, height - 125);
-		tabSheet.add(sheetpanel);
-		tabSheet.add(devSheetButtonPanel);
-		tabSheet.add(alertsPanel1);
 
 		tabbedPane.addTab("Input Selection", null, selectionPanel, null);
 		tabbedPane.addTab("Data Sheet", null, tabSheet, null);
-		add(tabbedPane);
 
 		filterPanel.filterButton.addActionListener(this);
 		filterPanel.refreshButton.addActionListener(this);
+		this.addFocusListener(new FocusListener() {
 
+			@Override
+			public void focusLost(FocusEvent arg0)
+			{
+			}
+
+			@Override
+			public void focusGained(FocusEvent arg0)
+			{
+				if(null != tabbedPane.getSelectedComponent())
+				{
+					tabbedPane.getSelectedComponent().requestFocusInWindow();
+				}
+			}
+		});
+		this.add(tabbedPane);
 	}
 
 	@Override
@@ -182,7 +157,9 @@ public class QAFeedBack extends JPanel implements ActionListener
 					users[i - 1] = ParaQueryUtil.getUserIdByExactName((String) element);
 			}
 		}
-		Map<String, ArrayList<ArrayList<String>>> reviewData = DataDevQueryUtil.getQAPDFData(users, plName, supplierName, taskType, startDate, endDate, null, userDTO.getId(), StatusName.qaFeedback, "");
+		Map<String, ArrayList<ArrayList<String>>> reviewData = DataDevQueryUtil.getQAPDFData(users,
+				plName, supplierName, taskType, startDate, endDate, null, userDTO.getId(),
+				StatusName.qaFeedback, "");
 		int k = 0;
 		tabbedPane.setSelectedIndex(1);
 		sheetpanel.openOfficeDoc();
@@ -190,12 +167,17 @@ public class QAFeedBack extends JPanel implements ActionListener
 		for(String pl : reviewData.keySet())
 		{
 			ws = new WorkingSheet(sheetpanel, pl, k);
-			sheetpanel.saveDoc("C:/Report/Parametric_Auto/" + plName + "@" + userDTO.getFullName() + "@" + System.currentTimeMillis() + ".xls");
+			sheetpanel.saveDoc("C:/Report/Parametric_Auto/" + plName + "@" + userDTO.getFullName()
+					+ "@" + System.currentTimeMillis() + ".xls");
 			wsMap.put(pl, ws);
 			// ws.setReviewHeader(Arrays.asList("Dev Comment", "QA Comment"));
-			if(DataDevQueryUtil.isNPITaskType(users, pl, supplierName, taskType, status, startDate, endDate, null))
+			if(DataDevQueryUtil.isNPITaskType(users, pl, supplierName, taskType, status, startDate,
+					endDate, null))
 				ws.setNPIflag(true);
-			ws.setQAReviewHeader(Arrays.asList("Old Flag", "Old Comment", "Status", "Wrong Feature", "Comment", "Root Cause", "Corrective Action", "Preventive Action", "Due date", "Issued By", "TL Status", "TLComment", "Validation Comment"), true);
+			ws.setQAReviewHeader(Arrays.asList("Old Flag", "Old Comment", "Status",
+					"Wrong Feature", "Comment", "Root Cause", "Corrective Action",
+					"Preventive Action", "Due date", "Issued By", "TL Status", "TLComment",
+					"Validation Comment"), true);
 			ArrayList<String> sheetHeader = ws.getHeader();
 			int oldflagindex = sheetHeader.indexOf("Old Flag");
 			int oldcommindex = sheetHeader.indexOf("Old Comment");
@@ -225,11 +207,15 @@ public class QAFeedBack extends JPanel implements ActionListener
 					String partNumber = sheetRecord.get(partIndex);
 					supplierName = sheetRecord.get(supplierIndex);
 					String qaflag = DataDevQueryUtil.getqaflagbycomid(sheetRecord.get(ComidIndex));
-					String wrongfeatures = DataDevQueryUtil.getfbwrongfets(Long.valueOf(sheetRecord.get(ComidIndex)), userDTO.getId());
-					ArrayList<String> feedCom = DataDevQueryUtil.getFeedbackByPartAndSupp(partNumber, supplierName);
-					String lstqaComment = DataDevQueryUtil.getlastengComment(new Long(feedCom.get(3)), userDTO.getId());
+					String wrongfeatures = DataDevQueryUtil.getfbwrongfets(
+							Long.valueOf(sheetRecord.get(ComidIndex)), userDTO.getId());
+					ArrayList<String> feedCom = DataDevQueryUtil.getFeedbackByPartAndSupp(
+							partNumber, supplierName);
+					String lstqaComment = DataDevQueryUtil.getlastengComment(
+							new Long(feedCom.get(3)), userDTO.getId());
 					ParaFeedbackAction action = null;
-					action = DataDevQueryUtil.getfeedBackActionByItem(new Long(feedCom.get(3)), userDTO.getId());
+					action = DataDevQueryUtil.getfeedBackActionByItem(new Long(feedCom.get(3)),
+							userDTO.getId());
 					if(action != null)
 					{
 						sheetRecord.set(CAIndex, action.getCAction());
@@ -301,7 +287,9 @@ public class QAFeedBack extends JPanel implements ActionListener
 			}
 		}
 
-		Map<String, ArrayList<ArrayList<String>>> reviewData = DataDevQueryUtil.getQAPDFData(users, plName, supplierName, taskType, startDate, endDate, new Long[] { document.getId() }, userDTO.getId(), StatusName.qaFeedback, pltype);
+		Map<String, ArrayList<ArrayList<String>>> reviewData = DataDevQueryUtil.getQAPDFData(users,
+				plName, supplierName, taskType, startDate, endDate,
+				new Long[] { document.getId() }, userDTO.getId(), StatusName.qaFeedback, pltype);
 
 		int k = 0;
 		tabbedPane.setSelectedIndex(1);
@@ -311,11 +299,15 @@ public class QAFeedBack extends JPanel implements ActionListener
 		{
 
 			ws = new WorkingSheet(sheetpanel, pl, k);
-			sheetpanel.saveDoc("C:/Report/" + pdfUrl.replaceAll(".*/", "") + "@" + System.currentTimeMillis() + ".xls");
+			sheetpanel.saveDoc("C:/Report/" + pdfUrl.replaceAll(".*/", "") + "@"
+					+ System.currentTimeMillis() + ".xls");
 			wsMap.put(pl, ws);
 			if(docInfoDTO.getTaskType().contains("NPI"))
 				ws.setNPIflag(true);
-			ws.setQAReviewHeader(Arrays.asList("Old Flag", "Old Comment", "Status", "Wrong Feature", "Comment", "Root Cause", "Corrective Action", "Preventive Action", "Due date", "Issued By", "TL Status", "TLComment", "Validation Comment"), true);
+			ws.setQAReviewHeader(Arrays.asList("Old Flag", "Old Comment", "Status",
+					"Wrong Feature", "Comment", "Root Cause", "Corrective Action",
+					"Preventive Action", "Due date", "Issued By", "TL Status", "TLComment",
+					"Validation Comment"), true);
 			ArrayList<String> sheetHeader = ws.getHeader();
 			int oldflagindex = sheetHeader.indexOf("Old Flag");
 			int oldcommindex = sheetHeader.indexOf("Old Comment");
@@ -345,11 +337,15 @@ public class QAFeedBack extends JPanel implements ActionListener
 					String partNumber = sheetRecord.get(partIndex);
 					supplierName = sheetRecord.get(supplierIndex);
 					String qaflag = DataDevQueryUtil.getqaflagbycomid(sheetRecord.get(ComidIndex));
-					String wrongfeatures = DataDevQueryUtil.getfbwrongfets(Long.valueOf(sheetRecord.get(ComidIndex)), userDTO.getId());
-					ArrayList<String> feedCom = DataDevQueryUtil.getFeedbackByPartAndSupp(partNumber, supplierName);
-					String lstqaComment = DataDevQueryUtil.getlastengComment(new Long(feedCom.get(3)), userDTO.getId());
+					String wrongfeatures = DataDevQueryUtil.getfbwrongfets(
+							Long.valueOf(sheetRecord.get(ComidIndex)), userDTO.getId());
+					ArrayList<String> feedCom = DataDevQueryUtil.getFeedbackByPartAndSupp(
+							partNumber, supplierName);
+					String lstqaComment = DataDevQueryUtil.getlastengComment(
+							new Long(feedCom.get(3)), userDTO.getId());
 					ParaFeedbackAction action = null;
-					action = DataDevQueryUtil.getfeedBackActionByItem(new Long(feedCom.get(3)), userDTO.getId());
+					action = DataDevQueryUtil.getfeedBackActionByItem(new Long(feedCom.get(3)),
+							userDTO.getId());
 					if(action != null)
 					{
 						sheetRecord.set(CAIndex, action.getCAction());
@@ -410,7 +406,9 @@ public class QAFeedBack extends JPanel implements ActionListener
 					users[i - 1] = ParaQueryUtil.getUserIdByExactName((String) element);
 			}
 		}
-		tablePanel.selectedData = DataDevQueryUtil.getReviewPDF(users, plName, supplierName, taskType, null, startDate, endDate, null, "QAReview", null, StatusName.qaFeedback, plType, userId);
+		tablePanel.selectedData = DataDevQueryUtil.getReviewPDF(users, plName, supplierName,
+				taskType, null, startDate, endDate, null, "QAReview", null, StatusName.qaFeedback,
+				plType, userId);
 		System.out.println("Selected Data Size=" + tablePanel.selectedData.size());
 		tablePanel.setTableData1(0, tablePanel.selectedData);
 	}
@@ -456,10 +454,10 @@ public class QAFeedBack extends JPanel implements ActionListener
 		}
 	}
 
-	public void updateFlags(ArrayList<String> flags)
+	public void updateFlags()
 	{
-		alertsPanel.updateFlags(flags);
-		alertsPanel1.updateFlags(flags);
+		selectionPanel.updateFlags();
+		tabSheet.updateFlags();
 		// alertsPanel2.updateFlags(flags);
 
 	}
@@ -478,8 +476,7 @@ public class QAFeedBack extends JPanel implements ActionListener
 		 */
 		protected Object doInBackground() throws Exception
 		{
-
-			Loading.show();
+			MainWindow.glass.setVisible(true);
 
 			/**
 			 * Show pdfs Action
@@ -495,12 +492,14 @@ public class QAFeedBack extends JPanel implements ActionListener
 				{
 					e.printStackTrace();
 				}
+				filterPanel.setCollapsed(true);
 			}
 			else if(event.getSource() == filterPanel.refreshButton)
 			{
 
 				filterPanel.filterList = DataDevQueryUtil.getQAFeedBackFilterData(userDTO);
 				filterPanel.refreshFilters();
+				filterPanel.setCollapsed(true);
 
 			}
 			/**
@@ -510,11 +509,13 @@ public class QAFeedBack extends JPanel implements ActionListener
 			{
 				boolean ok = false;
 				if(sheetpanel.isOpened())
-					ok = ParaQueryUtil.getDialogMessage("another PDF is opend are you need to replace this", "Confermation Dailog");
+					ok = ParaQueryUtil.getDialogMessage(
+							"another PDF is opend are you need to replace this",
+							"Confermation Dailog");
 
 				if(sheetpanel.isOpened() && ok == false)
 				{
-					Loading.close();
+					MainWindow.glass.setVisible(false);
 					return null;
 				}
 
@@ -522,10 +523,12 @@ public class QAFeedBack extends JPanel implements ActionListener
 				int selectedPdfsCount = selectedPdfs.length;
 				if(selectedPdfsCount == 0)
 				{
+					MainWindow.glass.setVisible(false);
 					JOptionPane.showMessageDialog(null, "Please Select PDF First");
 				}
 				else if(selectedPdfsCount > 1)
 				{
+					MainWindow.glass.setVisible(false);
 					JOptionPane.showMessageDialog(null, "Please Select One PDF");
 				}
 				else
@@ -549,11 +552,13 @@ public class QAFeedBack extends JPanel implements ActionListener
 
 				boolean ok = false;
 				if(sheetpanel.isOpened())
-					ok = ParaQueryUtil.getDialogMessage("another PDF is opening are you need to replace this", "Confermation Dailog");
+					ok = ParaQueryUtil.getDialogMessage(
+							"another PDF is opening are you need to replace this",
+							"Confermation Dailog");
 
 				if(sheetpanel.isOpened() && ok == false)
 				{
-					Loading.close();
+					MainWindow.glass.setVisible(false);
 					return null;
 				}
 
@@ -569,7 +574,7 @@ public class QAFeedBack extends JPanel implements ActionListener
 			/**
 			 * Save Parts Action
 			 */
-			else if(event.getSource() == save)
+			else if(event.getActionCommand().equals("Save"))
 			{
 				System.out.println("~~~~~~~ Start saving Data ~~~~~~~");
 				wsMap.keySet();
@@ -577,11 +582,22 @@ public class QAFeedBack extends JPanel implements ActionListener
 				{
 					if(wsName != "LoadAllData" && wsName != "Separation")
 					{
-						wsMap.get(wsName).saveQAReviewAction(QAName, "FB", false);
+						if(!wsMap.get(wsName).saved)
+						{
+							wsMap.get(wsName).saved = true;
+							wsMap.get(wsName).saveQAReviewAction(QAName, "FB", false);
+						}
+						else
+						{
+							MainWindow.glass.setVisible(false);
+							JOptionPane.showMessageDialog(null, "This Sheet Saved Before.");
+							return null;
+						}
 					}
+
 				}
 			}
-			else if(event.getSource() == Validate)
+			else if(event.getActionCommand().equals("Validate"))
 			{
 				System.out.println("~~~~~~~ Start validation Data ~~~~~~~");
 				wsMap.keySet();
@@ -594,8 +610,16 @@ public class QAFeedBack extends JPanel implements ActionListener
 				}
 			}
 
-			Loading.close();
+			MainWindow.glass.setVisible(false);
 			return null;
+		}
+	}
+
+	public void clearOfficeResources()
+	{
+		if(sheetpanel != null)
+		{
+			sheetpanel.closeApplication();
 		}
 	}
 
